// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hidden banner, without action buttons and without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
  visible={false}
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={
      Object {
        "position": "absolute",
        "top": 0,
        "transform": Array [
          Object {
            "translateY": -0,
          },
        ],
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginHorizontal": 8,
          "marginTop": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
              "textAlign": "left",
              "writingDirection": "ltr",
            },
            Object {
              "flex": 1,
              "margin": 8,
            },
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#03dac4",
              "backdrop": "rgba(0, 0, 0, 0.5)",
              "background": "#f6f6f6",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#B00020",
              "placeholder": "rgba(0, 0, 0, 0.54)",
              "primary": "#6200ee",
              "surface": "#ffffff",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 4,
          }
        }
      >
        Two line text string with two actions. One to two lines is preferable on mobile.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "margin": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and with image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
  visible={true}
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={null}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginHorizontal": 8,
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "margin": 8,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://callstack.com/images/team/Satya.png",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
              "textAlign": "left",
              "writingDirection": "ltr",
            },
            Object {
              "flex": 1,
              "margin": 8,
            },
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#03dac4",
              "backdrop": "rgba(0, 0, 0, 0.5)",
              "background": "#f6f6f6",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#B00020",
              "placeholder": "rgba(0, 0, 0, 0.54)",
              "primary": "#6200ee",
              "surface": "#ffffff",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 4,
          }
        }
      >
        Two line text string with two actions. One to two lines is preferable on mobile.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "margin": 4,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "elevation": 0,
            "margin": 4,
            "minWidth": "auto",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": NaN,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 0,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityTraits="button"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderRadius": 4,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Helvetica Neue",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "letterSpacing": 1,
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    Object {
                      "marginHorizontal": 8,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontFamily": "HelveticaNeue-Medium",
                    },
                    Object {
                      "fontFamily": "HelveticaNeue-Medium",
                    },
                  ],
                ]
              }
              theme={
                Object {
                  "colors": Object {
                    "accent": "#03dac4",
                    "backdrop": "rgba(0, 0, 0, 0.5)",
                    "background": "#f6f6f6",
                    "disabled": "rgba(0, 0, 0, 0.26)",
                    "error": "#B00020",
                    "placeholder": "rgba(0, 0, 0, 0.54)",
                    "primary": "#6200ee",
                    "surface": "#ffffff",
                    "text": "#000000",
                  },
                  "dark": false,
                  "fonts": Object {
                    "light": "HelveticaNeue-Light",
                    "medium": "HelveticaNeue-Medium",
                    "regular": "Helvetica Neue",
                    "thin": "HelveticaNeue-Thin",
                  },
                  "roundness": 4,
                }
              }
            >
              FIRST
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
  visible={true}
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={null}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginHorizontal": 8,
          "marginTop": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
              "textAlign": "left",
              "writingDirection": "ltr",
            },
            Object {
              "flex": 1,
              "margin": 8,
            },
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#03dac4",
              "backdrop": "rgba(0, 0, 0, 0.5)",
              "background": "#f6f6f6",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#B00020",
              "placeholder": "rgba(0, 0, 0, 0.54)",
              "primary": "#6200ee",
              "surface": "#ffffff",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 4,
          }
        }
      >
        Two line text string with two actions. One to two lines is preferable on mobile.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "margin": 4,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "elevation": 0,
            "margin": 4,
            "minWidth": "auto",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": NaN,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 0,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityTraits="button"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderRadius": 4,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Helvetica Neue",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "letterSpacing": 1,
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    Object {
                      "marginHorizontal": 8,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontFamily": "HelveticaNeue-Medium",
                    },
                    Object {
                      "fontFamily": "HelveticaNeue-Medium",
                    },
                  ],
                ]
              }
              theme={
                Object {
                  "colors": Object {
                    "accent": "#03dac4",
                    "backdrop": "rgba(0, 0, 0, 0.5)",
                    "background": "#f6f6f6",
                    "disabled": "rgba(0, 0, 0, 0.26)",
                    "error": "#B00020",
                    "placeholder": "rgba(0, 0, 0, 0.54)",
                    "primary": "#6200ee",
                    "surface": "#ffffff",
                    "text": "#000000",
                  },
                  "dark": false,
                  "fonts": Object {
                    "light": "HelveticaNeue-Light",
                    "medium": "HelveticaNeue-Medium",
                    "regular": "Helvetica Neue",
                    "thin": "HelveticaNeue-Thin",
                  },
                  "roundness": 4,
                }
              }
            >
              FIRST
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "transparent",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "elevation": 0,
            "margin": 4,
            "minWidth": "auto",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": NaN,
              "width": 0,
            },
            "shadowOpacity": 0.24,
            "shadowRadius": 0,
          }
        }
      >
        <View
          accessibilityComponentType="button"
          accessibilityTraits="button"
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "borderRadius": 4,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#000000",
                    "fontFamily": "Helvetica Neue",
                    "textAlign": "left",
                    "writingDirection": "ltr",
                  },
                  Array [
                    Object {
                      "letterSpacing": 1,
                      "marginHorizontal": 16,
                      "marginVertical": 9,
                      "textAlign": "center",
                    },
                    Object {
                      "marginHorizontal": 8,
                    },
                    Object {
                      "color": "#6200ee",
                      "fontFamily": "HelveticaNeue-Medium",
                    },
                    Object {
                      "fontFamily": "HelveticaNeue-Medium",
                    },
                  ],
                ]
              }
              theme={
                Object {
                  "colors": Object {
                    "accent": "#03dac4",
                    "backdrop": "rgba(0, 0, 0, 0.5)",
                    "background": "#f6f6f6",
                    "disabled": "rgba(0, 0, 0, 0.26)",
                    "error": "#B00020",
                    "placeholder": "rgba(0, 0, 0, 0.54)",
                    "primary": "#6200ee",
                    "surface": "#ffffff",
                    "text": "#000000",
                  },
                  "dark": false,
                  "fonts": Object {
                    "light": "HelveticaNeue-Light",
                    "medium": "HelveticaNeue-Medium",
                    "regular": "Helvetica Neue",
                    "thin": "HelveticaNeue-Thin",
                  },
                  "roundness": 4,
                }
              }
            >
              SECOND
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and with image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
  visible={true}
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={null}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginHorizontal": 8,
          "marginTop": 16,
        }
      }
    >
      <View
        style={
          Object {
            "margin": 8,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "https://callstack.com/images/team/Satya.png",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
              "textAlign": "left",
              "writingDirection": "ltr",
            },
            Object {
              "flex": 1,
              "margin": 8,
            },
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#03dac4",
              "backdrop": "rgba(0, 0, 0, 0.5)",
              "background": "#f6f6f6",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#B00020",
              "placeholder": "rgba(0, 0, 0, 0.54)",
              "primary": "#6200ee",
              "surface": "#ffffff",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 4,
          }
        }
      >
        Two line text string with two actions. One to two lines is preferable on mobile.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "margin": 4,
        }
      }
    />
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and without image 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "elevation": 1,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0.5,
        "width": 0,
      },
      "shadowOpacity": 0.24,
      "shadowRadius": 0.75,
    }
  }
  visible={true}
>
  <View
    style={
      Object {
        "height": 0,
      }
    }
  />
  <View
    onLayout={[Function]}
    style={null}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "marginBottom": 0,
          "marginHorizontal": 8,
          "marginTop": 16,
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Helvetica Neue",
              "textAlign": "left",
              "writingDirection": "ltr",
            },
            Object {
              "flex": 1,
              "margin": 8,
            },
          ]
        }
        theme={
          Object {
            "colors": Object {
              "accent": "#03dac4",
              "backdrop": "rgba(0, 0, 0, 0.5)",
              "background": "#f6f6f6",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "error": "#B00020",
              "placeholder": "rgba(0, 0, 0, 0.54)",
              "primary": "#6200ee",
              "surface": "#ffffff",
              "text": "#000000",
            },
            "dark": false,
            "fonts": Object {
              "light": "HelveticaNeue-Light",
              "medium": "HelveticaNeue-Medium",
              "regular": "Helvetica Neue",
              "thin": "HelveticaNeue-Thin",
            },
            "roundness": 4,
          }
        }
      >
        Two line text string with two actions. One to two lines is preferable on mobile.
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "margin": 4,
        }
      }
    />
  </View>
</View>
`;
